change con bg-color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="utility.css" />
   </head>
   <body>
-    <div class="container flex bg-white">
+    <div class="container flex bg-black">
       <div class="left">
         <div class="closeicon">
           <img src="img/close.svg" alt="close">
